--- a/tools/fritz/src/.deps/fritz-main.Po
+++ b/tools/fritz/src/.deps/fritz-main.Po
@@ -440,6 +440,7 @@ src/fritz-main.o: src/main.cc /usr/include/stdc-predef.h \
  /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_1709_07703_13.h \
  /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_1709_07242_13.h \
  /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_1712_02304.h \
+ /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_1803_02762.h \
  include/analysishandler/AnalysisHandlerATLAS_14TeV_projected.h \
  /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_14TeV_HighLumi/atlas_2014_010_hl_3l.h \
  /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_14TeV_HighLumi/atlas_phys_2014_010_sq_hl.h \
@@ -1674,6 +1675,8 @@ include/analysishandler/AnalysisHandlerATLAS_13TeV.h:
 /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_1709_07242_13.h:
 
 /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_1712_02304.h:
+
+/home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_1803_02762.h:
 
 include/analysishandler/AnalysisHandlerATLAS_14TeV_projected.h:
 
