--- a/tools/fritz/src/fritz/.deps/fritz-Fritz.Po
+++ b/tools/fritz/src/fritz/.deps/fritz-Fritz.Po
@@ -605,6 +605,7 @@ src/fritz/fritz-Fritz.o: src/fritz/Fritz.cc /usr/include/stdc-predef.h \
  /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_1712_02304.h \
  /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_1803_02762.h \
  /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_1807_06573.h \
+ /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_1808_01191.h \
  include/analysishandler/AnalysisHandlerATLAS_14TeV_projected.h \
  /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_14TeV_HighLumi/atlas_2014_010_hl_3l.h \
  /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_14TeV_HighLumi/atlas_phys_2014_010_sq_hl.h \
@@ -2033,6 +2034,8 @@ include/analysishandler/AnalysisHandlerATLAS_13TeV.h:
 /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_1803_02762.h:
 
 /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_1807_06573.h:
+
+/home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_1808_01191.h:
 
 include/analysishandler/AnalysisHandlerATLAS_14TeV_projected.h:
 
