--- a/tools/fritz/src/analysishandler/.deps/fritz-AnalysisHandlerATLAS_13TeV.Po
+++ b/tools/fritz/src/analysishandler/.deps/fritz-AnalysisHandlerATLAS_13TeV.Po
@@ -540,7 +540,8 @@ src/analysishandler/fritz-AnalysisHandlerATLAS_13TeV.o: \
  /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_1807_06573.h \
  /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_1808_01191.h \
  /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_1808_01899.h \
- /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_1805_09299.h
+ /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_1805_09299.h \
+ /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_1708_09266.h
 
 /usr/include/stdc-predef.h:
 
@@ -1775,3 +1776,5 @@ include/global/FritzConfig.h:
 /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_1808_01899.h:
 
 /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_1805_09299.h:
+
+/home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_1708_09266.h:
