--- a/tools/fritz/src/fritz/.deps/fritz-Fritz.Po
+++ b/tools/fritz/src/fritz/.deps/fritz-Fritz.Po
@@ -587,6 +587,7 @@ src/fritz/fritz-Fritz.o: src/fritz/Fritz.cc /usr/include/stdc-predef.h \
  /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_1808_01191.h \
  /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_1808_01899.h \
  /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_1805_09299.h \
+ /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_1708_09266.h \
  include/analysishandler/AnalysisHandlerATLAS_14TeV_projected.h \
  /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_14TeV_HighLumi/atlas_2014_010_hl_3l.h \
  /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_14TeV_HighLumi/atlas_phys_2014_010_sq_hl.h \
@@ -1971,6 +1972,8 @@ include/analysishandler/AnalysisHandlerATLAS_13TeV.h:
 /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_1808_01899.h:
 
 /home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_1805_09299.h:
+
+/home/shadowquark/code/github/checkmate/tools/analysis/include/analyses/ATLAS_13TeV/atlas_1708_09266.h:
 
 include/analysishandler/AnalysisHandlerATLAS_14TeV_projected.h:
 
