--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -1,18 +1,15 @@
-m4trace:aclocal.m4:679: -1- AC_SUBST([am__quote])
-m4trace:aclocal.m4:679: -1- AC_SUBST_TRACE([am__quote])
-m4trace:aclocal.m4:679: -1- m4_pattern_allow([^am__quote$])
-m4trace:aclocal.m4:1374: -1- m4_include([m4/cpp11.m4])
-m4trace:aclocal.m4:1375: -1- m4_include([m4/delphes.m4])
-m4trace:aclocal.m4:1376: -1- m4_include([m4/hepmc.m4])
-m4trace:aclocal.m4:1377: -1- m4_include([m4/libtool.m4])
-m4trace:aclocal.m4:1378: -1- m4_include([m4/ltoptions.m4])
-m4trace:aclocal.m4:1379: -1- m4_include([m4/ltsugar.m4])
-m4trace:aclocal.m4:1380: -1- m4_include([m4/ltversion.m4])
-m4trace:aclocal.m4:1381: -1- m4_include([m4/lt~obsolete.m4])
-m4trace:aclocal.m4:1382: -1- m4_include([m4/madgraph.m4])
-m4trace:aclocal.m4:1383: -1- m4_include([m4/pythia.m4])
-m4trace:aclocal.m4:1384: -1- m4_include([m4/python.m4])
-m4trace:aclocal.m4:1385: -1- m4_include([m4/root.m4])
+m4trace:aclocal.m4:1489: -1- m4_include([m4/cpp11.m4])
+m4trace:aclocal.m4:1490: -1- m4_include([m4/delphes.m4])
+m4trace:aclocal.m4:1491: -1- m4_include([m4/hepmc.m4])
+m4trace:aclocal.m4:1492: -1- m4_include([m4/libtool.m4])
+m4trace:aclocal.m4:1493: -1- m4_include([m4/ltoptions.m4])
+m4trace:aclocal.m4:1494: -1- m4_include([m4/ltsugar.m4])
+m4trace:aclocal.m4:1495: -1- m4_include([m4/ltversion.m4])
+m4trace:aclocal.m4:1496: -1- m4_include([m4/lt~obsolete.m4])
+m4trace:aclocal.m4:1497: -1- m4_include([m4/madgraph.m4])
+m4trace:aclocal.m4:1498: -1- m4_include([m4/pythia.m4])
+m4trace:aclocal.m4:1499: -1- m4_include([m4/python.m4])
+m4trace:aclocal.m4:1500: -1- m4_include([m4/root.m4])
 m4trace:configure.ac:5: -1- AC_INIT([CheckMATE], [2.0.0], [daschm@uni-bonn.de])
 m4trace:configure.ac:5: -1- m4_pattern_forbid([^_?A[CHUM]_])
 m4trace:configure.ac:5: -1- m4_pattern_forbid([_AC_])
@@ -78,9 +75,6 @@ m4trace:configure.ac:5: -1- m4_pattern_allow([^sharedstatedir$])
 m4trace:configure.ac:5: -1- AC_SUBST([localstatedir], ['${prefix}/var'])
 m4trace:configure.ac:5: -1- AC_SUBST_TRACE([localstatedir])
 m4trace:configure.ac:5: -1- m4_pattern_allow([^localstatedir$])
-m4trace:configure.ac:5: -1- AC_SUBST([runstatedir], ['${localstatedir}/run'])
-m4trace:configure.ac:5: -1- AC_SUBST_TRACE([runstatedir])
-m4trace:configure.ac:5: -1- m4_pattern_allow([^runstatedir$])
 m4trace:configure.ac:5: -1- AC_SUBST([includedir], ['${prefix}/include'])
 m4trace:configure.ac:5: -1- AC_SUBST_TRACE([includedir])
 m4trace:configure.ac:5: -1- m4_pattern_allow([^includedir$])
@@ -166,7 +160,7 @@ m4trace:configure.ac:5: -1- AC_SUBST_TRACE([target_alias])
 m4trace:configure.ac:5: -1- m4_pattern_allow([^target_alias$])
 m4trace:configure.ac:6: -1- AM_INIT_AUTOMAKE
 m4trace:configure.ac:6: -1- m4_pattern_allow([^AM_[A-Z]+FLAGS$])
-m4trace:configure.ac:6: -1- AM_AUTOMAKE_VERSION([1.16.1])
+m4trace:configure.ac:6: -1- AM_AUTOMAKE_VERSION([1.15.1])
 m4trace:configure.ac:6: -1- AC_REQUIRE_AUX_FILE([install-sh])
 m4trace:configure.ac:6: -1- AC_SUBST([INSTALL_PROGRAM])
 m4trace:configure.ac:6: -1- AC_SUBST_TRACE([INSTALL_PROGRAM])
@@ -297,6 +291,9 @@ m4trace:configure.ac:8: -1- m4_pattern_allow([^DEPDIR$])
 m4trace:configure.ac:8: -1- AC_SUBST([am__include])
 m4trace:configure.ac:8: -1- AC_SUBST_TRACE([am__include])
 m4trace:configure.ac:8: -1- m4_pattern_allow([^am__include$])
+m4trace:configure.ac:8: -1- AC_SUBST([am__quote])
+m4trace:configure.ac:8: -1- AC_SUBST_TRACE([am__quote])
+m4trace:configure.ac:8: -1- m4_pattern_allow([^am__quote$])
 m4trace:configure.ac:8: -1- AM_CONDITIONAL([AMDEP], [test "x$enable_dependency_tracking" != xno])
 m4trace:configure.ac:8: -1- AC_SUBST([AMDEP_TRUE])
 m4trace:configure.ac:8: -1- AC_SUBST_TRACE([AMDEP_TRUE])
@@ -467,8 +464,8 @@ m4trace:configure.ac:12: -1- AC_SUBST_TRACE([lt_ECHO])
 m4trace:configure.ac:12: -1- m4_pattern_allow([^lt_ECHO$])
 m4trace:configure.ac:12: -1- LT_SUPPORTED_TAG([CC])
 m4trace:configure.ac:12: -1- _m4_warn([syntax], [AC_LANG_CONFTEST: no AC_LANG_SOURCE call detected in body], [../../lib/autoconf/lang.m4:193: AC_LANG_CONFTEST is expanded from...
-../../lib/autoconf/general.m4:2672: _AC_LINK_IFELSE is expanded from...
-../../lib/autoconf/general.m4:2689: AC_LINK_IFELSE is expanded from...
+../../lib/autoconf/general.m4:2661: _AC_LINK_IFELSE is expanded from...
+../../lib/autoconf/general.m4:2678: AC_LINK_IFELSE is expanded from...
 m4/libtool.m4:1022: _LT_SYS_MODULE_PATH_AIX is expanded from...
 m4/libtool.m4:4158: _LT_LINKER_SHLIBS is expanded from...
 m4/libtool.m4:5233: _LT_LANG_C_CONFIG is expanded from...
@@ -476,8 +473,8 @@ m4/libtool.m4:138: _LT_SETUP is expanded from...
 m4/libtool.m4:67: LT_INIT is expanded from...
 configure.ac:12: the top level])
 m4trace:configure.ac:12: -1- _m4_warn([syntax], [AC_LANG_CONFTEST: no AC_LANG_SOURCE call detected in body], [../../lib/autoconf/lang.m4:193: AC_LANG_CONFTEST is expanded from...
-../../lib/autoconf/general.m4:2672: _AC_LINK_IFELSE is expanded from...
-../../lib/autoconf/general.m4:2689: AC_LINK_IFELSE is expanded from...
+../../lib/autoconf/general.m4:2661: _AC_LINK_IFELSE is expanded from...
+../../lib/autoconf/general.m4:2678: AC_LINK_IFELSE is expanded from...
 m4/libtool.m4:1022: _LT_SYS_MODULE_PATH_AIX is expanded from...
 m4/libtool.m4:4158: _LT_LINKER_SHLIBS is expanded from...
 m4/libtool.m4:5233: _LT_LANG_C_CONFIG is expanded from...
@@ -500,8 +497,8 @@ m4trace:configure.ac:12: -1- AC_SUBST([OTOOL64])
 m4trace:configure.ac:12: -1- AC_SUBST_TRACE([OTOOL64])
 m4trace:configure.ac:12: -1- m4_pattern_allow([^OTOOL64$])
 m4trace:configure.ac:12: -1- _m4_warn([syntax], [AC_LANG_CONFTEST: no AC_LANG_SOURCE call detected in body], [../../lib/autoconf/lang.m4:193: AC_LANG_CONFTEST is expanded from...
-../../lib/autoconf/general.m4:2672: _AC_LINK_IFELSE is expanded from...
-../../lib/autoconf/general.m4:2689: AC_LINK_IFELSE is expanded from...
+../../lib/autoconf/general.m4:2661: _AC_LINK_IFELSE is expanded from...
+../../lib/autoconf/general.m4:2678: AC_LINK_IFELSE is expanded from...
 m4/libtool.m4:4158: _LT_LINKER_SHLIBS is expanded from...
 m4/libtool.m4:5233: _LT_LANG_C_CONFIG is expanded from...
 m4/libtool.m4:138: _LT_SETUP is expanded from...
@@ -591,8 +588,8 @@ m4trace:configure.ac:12: -1- AC_SUBST([LD])
 m4trace:configure.ac:12: -1- AC_SUBST_TRACE([LD])
 m4trace:configure.ac:12: -1- m4_pattern_allow([^LD$])
 m4trace:configure.ac:12: -1- _m4_warn([syntax], [AC_LANG_CONFTEST: no AC_LANG_SOURCE call detected in body], [../../lib/autoconf/lang.m4:193: AC_LANG_CONFTEST is expanded from...
-../../lib/autoconf/general.m4:2672: _AC_LINK_IFELSE is expanded from...
-../../lib/autoconf/general.m4:2689: AC_LINK_IFELSE is expanded from...
+../../lib/autoconf/general.m4:2661: _AC_LINK_IFELSE is expanded from...
+../../lib/autoconf/general.m4:2678: AC_LINK_IFELSE is expanded from...
 m4/libtool.m4:1022: _LT_SYS_MODULE_PATH_AIX is expanded from...
 m4/libtool.m4:5340: _LT_LANG_CXX_CONFIG is expanded from...
 m4/libtool.m4:785: _LT_LANG is expanded from...
@@ -602,8 +599,8 @@ m4/libtool.m4:138: _LT_SETUP is expanded from...
 m4/libtool.m4:67: LT_INIT is expanded from...
 configure.ac:12: the top level])
 m4trace:configure.ac:12: -1- _m4_warn([syntax], [AC_LANG_CONFTEST: no AC_LANG_SOURCE call detected in body], [../../lib/autoconf/lang.m4:193: AC_LANG_CONFTEST is expanded from...
-../../lib/autoconf/general.m4:2672: _AC_LINK_IFELSE is expanded from...
-../../lib/autoconf/general.m4:2689: AC_LINK_IFELSE is expanded from...
+../../lib/autoconf/general.m4:2661: _AC_LINK_IFELSE is expanded from...
+../../lib/autoconf/general.m4:2678: AC_LINK_IFELSE is expanded from...
 m4/libtool.m4:1022: _LT_SYS_MODULE_PATH_AIX is expanded from...
 m4/libtool.m4:5340: _LT_LANG_CXX_CONFIG is expanded from...
 m4/libtool.m4:785: _LT_LANG is expanded from...
@@ -764,7 +761,7 @@ m4trace:configure.ac:27: -1- AC_SUBST_TRACE([pkgpyexecdir])
 m4trace:configure.ac:27: -1- m4_pattern_allow([^pkgpyexecdir$])
 m4trace:configure.ac:28: -1- _m4_warn([obsolete], [The macro `AC_HELP_STRING' is obsolete.
 You should run autoupdate.], [../../lib/autoconf/general.m4:207: AC_HELP_STRING is expanded from...
-../../lib/autoconf/general.m4:1492: AC_ARG_WITH is expanded from...
+../../lib/autoconf/general.m4:1481: AC_ARG_WITH is expanded from...
 m4/root.m4:36: ROOT_PATH is expanded from...
 configure.ac:28: the top level])
 m4trace:configure.ac:28: -1- AC_SUBST([ROOTCONF])
@@ -857,7 +854,7 @@ m4trace:configure.ac:37: -2- _m4_warn([obsolete], [The macro `AC_HELP_STRING' is
 You should run autoupdate.], [../../lib/autoconf/general.m4:207: AC_HELP_STRING is expanded from...
 m4/madgraph.m4:2: CHECK_MADGRAPH is expanded from...
 configure.ac:37: the top level])
-m4trace:configure.ac:37: -1- _m4_warn([cross], [cannot check for file existence when cross compiling], [../../lib/autoconf/general.m4:2788: AC_CHECK_FILE is expanded from...
+m4trace:configure.ac:37: -1- _m4_warn([cross], [cannot check for file existence when cross compiling], [../../lib/autoconf/general.m4:2777: AC_CHECK_FILE is expanded from...
 m4/madgraph.m4:2: CHECK_MADGRAPH is expanded from...
 configure.ac:37: the top level])
 m4trace:configure.ac:37: -1- AM_CONDITIONAL([HAVE_MADGRAPH], [test "x$with_madgraph" != "xno"])
